# startdomain

./: .gitignore  CHANGELOG.md  CHANGES.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
app/: settings.py
snippet/: models copy.py
start_domain/: apps.py
start_domain/management/commands/: startdomain.py
start_domain/management/commands/templates/: admin.py  models.py
startdomain/: apps.py
startdomain/management/commands/: startdomain.py
startdomain/management/commands/templates/: admin.py  apis.py  models.py  serializers.py  tests.py  urls.py
