[tool.poetry]
name = "startdomain"
version = "0.2.1"
description = ""
authors = ["MuhammadMoustafa <engmuhammadmoustafa@gmail.com>"]
maintainers = ["MuhammadMoustafa <engmuhammadmoustafa@gmail.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/startdomain/"
repository  = "https://github.com/MuhammadMoustafa/startdomain/"
documentation = "https://github.com/MuhammadMoustafa/startdomain#readme"
keywords = ["django", "manage.py"]
include = ["CHANGELOG.md"]

packages = [{include = "startdomain"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
