[tool.poetry]
name = "startdomain"
version = "0.2.4"
description = "A django app to create apps aligned with [Django API Domains](https://phalt.github.io/django-api-domains/)"
license = "MIT"
authors = ["MuhammadMoustafa <engmuhammadmoustafa@gmail.com>"]
maintainers = ["MuhammadMoustafa <engmuhammadmoustafa@gmail.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/startdomain/"
repository  = "https://github.com/MuhammadMoustafa/startdomain/"
documentation = "https://github.com/MuhammadMoustafa/startdomain#readme"
keywords = ["django", "scripts"]
include = ["CHANGELOG.md"]

packages = [{include = "startdomain"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0 || ^5.0 || ^6.0"
djangorestframework = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
